// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display applications 1`] = `
<div
  className="boxed-group project-card big-padded display-flex-column display-flex-space-between"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div>
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <ProjectCardQualityGate
        status="OK"
      />
      <div
        className="project-card-header-right"
      >
        <PrivacyBadgeContainer
          className="spacer-left"
          qualifier="APP"
          visibility="public"
        />
      </div>
    </div>
    <div
      className="display-flex-center project-card-dates spacer-top"
    >
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
      <div
        className="text-right flex-1-0-auto"
      >
        <QualifierIcon
          className="spacer-right"
          qualifier="APP"
        />
        qualifier.APP
      </div>
    </div>
  </div>
  <ProjectCardOverallMeasures
    componentQualifier="APP"
    measures={
      Object {
        "alert_status": "OK",
        "new_bugs": "12",
        "reliability_rating": "1.0",
        "sqale_rating": "1.0",
      }
    }
  />
</div>
`;

exports[`should display applications: with project count 1`] = `
<div
  className="boxed-group project-card big-padded display-flex-column display-flex-space-between"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div>
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <ProjectCardQualityGate
        status="OK"
      />
      <div
        className="project-card-header-right"
      >
        <PrivacyBadgeContainer
          className="spacer-left"
          qualifier="APP"
          visibility="public"
        />
      </div>
    </div>
    <div
      className="display-flex-center project-card-dates spacer-top"
    >
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
      <div
        className="text-right flex-1-0-auto"
      >
        <QualifierIcon
          className="spacer-right"
          qualifier="APP"
        />
        qualifier.APP
         ‒ 
        x_projects_.3
      </div>
    </div>
  </div>
  <ProjectCardOverallMeasures
    componentQualifier="APP"
    measures={
      Object {
        "alert_status": "OK",
        "new_bugs": "12",
        "projects": "3",
        "reliability_rating": "1.0",
        "sqale_rating": "1.0",
      }
    }
  />
</div>
`;

exports[`should display configure analysis button for logged in user 1`] = `
<div
  className="boxed-group project-card big-padded display-flex-column display-flex-space-between"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div>
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <div
        className="project-card-header-right"
      >
        <PrivacyBadgeContainer
          className="spacer-left"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="project-card-not-analyzed"
  >
    <span
      className="note"
    >
      projects.not_analyzed.TRK
    </span>
    <Link
      className="button spacer-left"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      projects.configure_analysis
    </Link>
  </div>
</div>
`;

exports[`should display correclty when project need issue synch 1`] = `
<div
  className="boxed-group project-card big-padded display-flex-column display-flex-space-between need-issue-sync"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div>
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        Foo
      </h2>
      <ProjectCardQualityGate
        status="OK"
      />
      <div
        className="project-card-header-right"
      >
        <PrivacyBadgeContainer
          className="spacer-left"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
    <div
      className="display-flex-center project-card-dates spacer-top"
    >
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
    </div>
  </div>
  <ProjectCardOverallMeasures
    componentQualifier="TRK"
    measures={
      Object {
        "alert_status": "OK",
        "new_bugs": "12",
        "reliability_rating": "1.0",
        "sqale_rating": "1.0",
      }
    }
  />
</div>
`;

exports[`should display not analyzed yet 1`] = `
<div
  className="boxed-group project-card big-padded display-flex-column display-flex-space-between"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div>
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <div
        className="project-card-header-right"
      >
        <PrivacyBadgeContainer
          className="spacer-left"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="project-card-not-analyzed"
  >
    <span
      className="note"
    >
      projects.not_analyzed.TRK
    </span>
  </div>
</div>
`;

exports[`should display the overall measures and quality gate 1`] = `
<div
  className="boxed-group project-card big-padded display-flex-column display-flex-space-between"
  data-key="foo"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div>
    <div
      className="project-card-header"
    >
      <h2
        className="project-card-name"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </h2>
      <ProjectCardQualityGate
        status="OK"
      />
      <div
        className="project-card-header-right"
      >
        <PrivacyBadgeContainer
          className="spacer-left"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
    <div
      className="display-flex-center project-card-dates spacer-top"
    >
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
    </div>
  </div>
  <ProjectCardOverallMeasures
    componentQualifier="TRK"
    measures={
      Object {
        "alert_status": "OK",
        "new_bugs": "12",
        "reliability_rating": "1.0",
        "sqale_rating": "1.0",
      }
    }
  />
</div>
`;
